# fume-hood-sash-automation

./: .gitignore  Dockerfile  READEME.md  README.md  current.py  docker-compose.yml  main.py  pyproject.toml  relay.py  sash_boot_logger.py  switches.py
config/: actuator_config.yaml  sensor_config.yaml
device-test/: README.md  api_service_test.py  smoke_tests.py
docker-test/: README.md
docker-test/dockerfiles/: Dockerfile.test  README.md  docker-compose.test.rpi.yml
docker-test/mock_hardware/: smbus2.py
docker-test/mock_hardware/smbus2/: __init__.py
docker-test/scripts/: run_dev_quick.sh  run_dev_tests.sh  setup_local_only.sh  test_local.sh
docker-test/tests/: test_actuator_api.py  test_actuator_controller.py  test_integration_actuator.py
examples/: microservice_client.py  remote_control_example.py  sensor_client_example.py  ssh_client_example.py
samples/: remote_control_example.py  sensor_client_example.py
sash-actuator/: hall.py  lcd_display_DFR0997.py  main.py  relay.py
sash-sensor-lite/: main.py  main_networked.py
src/hood_sash_automation/actuator/: api_service.py  buttons.py  controller.py  lcd_display_DFR0997.py  main.py  relay.py  switches.py  switches.py.bak
src/hood_sash_automation/actuator/test scripts/: test_hall.py
src/hood_sash_automation/api/: API.md  __init__.py  api_service.py  enhanced_api_service.py  microservice_setup.md  ssh_control.sh
src/hood_sash_automation/config/: __init__.py  actuator_config.yaml  sensor_config.yaml
src/hood_sash_automation/sensor/: api_service.py  main.py  main_networked.py  sensor.py
systemd/: actuator.service  sensor.service
test scripts/: test_hall_poll.py  test_relay.py
tests/: Test.md  test_actuator_api.py  test_actuator_controller.py  test_hall.py  test_hall_poll.py  test_relay.py
tests/device-test/: Device_Test.md  README.md  api_service_test.py  smoke_tests.py
tests/docker-test/: Docker_Test.md  README.md
tests/docker-test/dockerfiles/: Dockerfile  Dockerfile.test  README.md  docker-compose.dev.yml  docker-compose.rpi.yml  docker-compose.test.rpi.yml  docker-compose.test.yml  docker-compose.yml
tests/docker-test/mock_hardware/: smbus2.py
tests/docker-test/mock_hardware/RPi/: GPIO.py  __init__.py
tests/docker-test/mock_hardware/smbus2/: __init__.py
tests/docker-test/scripts/: run_rpi_tests.sh  setup_local_only.sh  test_local.sh
tests/docker-test/tests/: test_actuator_api.py  test_actuator_controller.py  test_e2e_api.py  test_hall.py  test_hall_poll.py  test_integration_actuator.py  test_relay.py
users/config/: actuator_config.yaml  sensor_config.yaml
users/examples/: microservice_client.py  remote_control_example.py  ssh_client_example.py
